# rust-dygpi

./: Cargo.toml  README.md  run-e2e-test
.github/workflows/: rust.yml
src/: config.rs  error.rs  lib.rs  manager.rs  plugin.rs
test_api/: Cargo.toml
test_api/src/: lib.rs
test_main/: Cargo.toml
test_main/tests/: test_plugin_manager.rs
test_plugin/: Cargo.toml
test_plugin/src/: lib.rs
