[package]
name = "dygpi"
description = "Provides support for 'Dynamic Generic PlugIns', library based plugins for Rust."
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
version = "0.1.5"
edition = "2018"
documentation = "https://docs.rs/dygpi/"
repository = "https://github.com/johnstonskj/rust-dygpi.git"
license = "MIT"
readme = "README.md"
publish = true

[workspace]
members = [
    "test_api",
    "test_plugin",
    "test_main",
]
default-members = [
    "test_api",
    "test_plugin",
    "test_main",
]

[features]
default = ["config_serde"]
config_serde = ["serde"]

[dependencies]
libloading = "0.8"
log = "0.4"
search_path = "0.1"

serde = { version = "1.0", features = ["derive"], optional = true }

[build-dependencies]
rustc_version = "0.4"

[dev-dependencies]
toml = "0.8"
serde_json = "1.0"
serde_yaml = "0.9"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-test" ]
